# create-go-app

./: .gitignore  CHANGELOG.md  Cargo.toml  go.mod  go.sum  main.go
domains/contracts/: RestHandler_test.go
examples/adapters/id/: idier.go
examples/adapters/posty/: posty.go
examples/adapters/rdb/: rdb.go
examples/adpaters/posty/: posty.go
examples/adpaters/rabbit/: rabbit.go
examples/basic/: Dockerfile
examples/basic/adapters/: adapters.go
examples/basic/adapters/applicationinsightstrace/: applicationinsightstrace.go
examples/basic/cmd/: main.go
examples/basic/cmd/rest/: README.md  RestHandler.go  RestHandler_test.go  setupRoutes.go
examples/basic/domains/constants/: consts.go
examples/basic/domains/contracts/: RestHandler.go
examples/basic/infra/: infra.go
examples/basic/internals/: README.md
examples/basic/internals/config/: config.go
examples/basic/pkg/adapters/: adapters.go
examples/basic/pkg/infra/: infra.go
examples/basic/pkg/services/: services.go
examples/bwf/: Dockerfile  README.md
examples/bwf/cmd/: main.go
examples/monoapp/: .cga.toml  Dockerfile  go.mod  go.sum
examples/monoapp/cmd/: main.go
examples/monoapp/swagger/: swagger-ui.css
examples/monorepo/: .cga.toml  .gitignore  go.work  go.work.sum
examples/monorepo/swagger/: index.css
infra/tracing/: tracing.go
rest/: setupRoutes.go
rest/middlewares/: recovery.go
services/factory/: fact.go
src/: bare.rs  cli.rs  clients.rs  controllers.rs  gen.rs  main.rs  models.rs  mono.rs  openapi.rs  packages.rs  templates.rs  traits.rs  utils.rs
(+96 files in other folders)
